--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checkin-bot",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "dev": "ng serve",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
