--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/bulma/css/bulma.min.css",
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
