--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.4",
-    "@angular/cdk": "^10.1.0",
+    "@angular/animations": "^10.0.7",
+    "@angular/cdk": "^10.0.0",
     "@angular/cli": "~10.0.3",
     "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
@@ -24,6 +24,9 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "bulma": "^0.9.0",
+    "@nebular/eva-icons": "^6.0.0",
+    "@nebular/theme": "^6.0.0",
+    "eva-icons": "^1.1.2",
     "express": "^4.17.1",
     "moment": "^2.27.0",
     "moment-range": "^4.0.2",
@@ -38,6 +41,7 @@
     "@angular-devkit/build-angular": "~0.1000.3",
     "@angular/cli": "~10.0.3",
     "@angular/compiler-cli": "~10.0.4",
+    "@schematics/angular": "~10.0.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
