--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.7",
-    "@angular/cdk": "^10.0.0",
+    "@angular/cdk": "^10.1.2",
     "@angular/cli": "~10.0.3",
     "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
     "@angular/compiler-cli": "~10.0.4",
-    "@angular/core": "~10.0.4",
+    "@angular/core": "^10.0.7",
     "@angular/forms": "~10.0.4",
-    "@angular/material": "^10.1.0",
+    "@angular/material": "^10.1.2",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
-    "bulma": "^0.9.0",
     "@nebular/eva-icons": "^6.0.0",
     "@nebular/theme": "^6.0.0",
+    "bulma": "^0.9.0",
     "eva-icons": "^1.1.2",
     "express": "^4.17.1",
     "moment": "^2.27.0",
