--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bulma/css/bulma.min.css",
               "src/styles.css",
+              "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css",
-              "node_modules/@nebular/theme/styles/prebuilt/default.css"
+              "src/custom-theme.scss"
             ],
             "scripts": []
           },
